<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Snooow on 2019/5/10
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:background="@color/white"
              android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/ll_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dimens_20"
            android:layout_height="@dimen/dimens_20"
            android:src="@drawable/home_selected"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/home_text"
            android:textSize="@dimen/dimens_9"
            android:textColor="@color/text_color"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_notify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dimens_20"
            android:layout_height="@dimen/dimens_20"
            android:src="@drawable/friend_list_selected"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/notify_text"
            android:textSize="@dimen/dimens_9"
            android:textColor="@color/text_color"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_mine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dimens_20"
            android:layout_height="@dimen/dimens_20"
            android:src="@drawable/news_selected"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/mine_text"
            android:textSize="@dimen/dimens_9"
            android:textColor="@color/text_color"/>
    </LinearLayout>
</LinearLayout>